[package]
name = "any_mail"
version = "0.1.0"
edition = "2021"
description = "A simple way to send emails from your application"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wyatt-herkamp/any_mail"
authors = ["Wyatt Herkamp <wherkamp@gmail.com>"]
keywords = ["email", "smtp", "mail", "tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
lettre = { version = "0.11", features = [
    "smtp-transport",
    "pool",
    "builder",
], optional = true, default-features = false }
hostname = "0.3"
tokio = { version = "1", features = ["full"], optional = true }
handlebars = { version = "5.0.0-beta.5", features = [
    "rust-embed",
], optional = true }
thiserror = "1"
flume = { version = "0.11" }
tracing = { version = "0.1" }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"], optional = true }
parking_lot = "0.11"
strum = { version = "0", features = ["derive"] }
[dev-dependencies]
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
[features]
default = [
    "smtp",
    "mail-whale",
    "mail-gun",
    "dep:handlebars",
    "tokio_rustls",
    "reqwest_rustls",
]
mail-whale = ["dep:reqwest", "dep:serde_json"]
mail-gun = ["dep:reqwest", "dep:serde_json"]
smtp = ["lettre", "lettre/smtp-transport", "lettre/builder"]
tokio_rustls = ["tokio", "lettre/tokio1-rustls-tls"]
reqwest_rustls = ["reqwest/rustls-tls"]
